RESOLVED FIXED292472
REGRESSION(294465@main): Broke the internal iOS build
https://bugs.webkit.org/show_bug.cgi?id=292472
Summary REGRESSION(294465@main): Broke the internal iOS build
Abrar Rahman Protyasha
Reported 2025-05-02 18:33:49 PDT
It doesn't suffice to forward declare `IntRect`, so we need to very partially revert 294465@main.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-02 18:34:05 PDT
Abrar Rahman Protyasha
Comment 2 2025-05-02 18:43:48 PDT
EWS
Comment 3 2025-05-02 18:48:58 PDT
Committed 294468@main (72ae03af79fa): <https://commits.webkit.org/294468@main> Reviewed commits have been landed. Closing PR #44880 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.