REGRESSION(294465@main): Broke the internal iOS build https://bugs.webkit.org/show_bug.cgi?id=292472 rdar://150565053

Unreviewed build fix.

A forward declaration of IntRect does not suffice for the
ENABLE(IOS_TOUCH_EVENTS) build. This patch restores the IntRect.h header
include for said configuration.

* Source/WebCore/dom/Document.h:

Canonical link: https://commits.webkit.org/294468@main